[gd_scene load_steps=55 format=2]

[ext_resource path="res://Enemies/Monster_Creatures_Fantasy(Version 1.3)/Goblin/Attack3.png" type="Texture" id=1]
[ext_resource path="res://Shadows/SmallShadow.png" type="Texture" id=2]
[ext_resource path="res://Enemies/Bat.gd" type="Script" id=3]
[ext_resource path="res://Hitboxes and Hurtboxes/HurtBox.tscn" type="PackedScene" id=4]
[ext_resource path="res://Stats.tscn" type="PackedScene" id=5]
[ext_resource path="res://Enemies/PlayerDetectionZone.tscn" type="PackedScene" id=6]
[ext_resource path="res://Hitboxes and Hurtboxes/HitBox.tscn" type="PackedScene" id=7]
[ext_resource path="res://Hitboxes and Hurtboxes/SoftCollision.tscn" type="PackedScene" id=8]
[ext_resource path="res://Enemies/WanderController.tscn" type="PackedScene" id=9]
[ext_resource path="res://Enemies/Node2D.gd" type="Script" id=11]
[ext_resource path="res://Enemies/Monster_Creatures_Fantasy(Version 1.3)/Goblin/Bomb_sprite.png" type="Texture" id=12]
[ext_resource path="res://Enemies/GoblinAnimations.gd" type="Script" id=13]

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 1 )
region = Rect2( 150, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 1 )
region = Rect2( 300, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 1 )
region = Rect2( 450, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 1 )
region = Rect2( 600, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 1 )
region = Rect2( 750, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=55]
atlas = ExtResource( 1 )
region = Rect2( 900, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=56]
atlas = ExtResource( 1 )
region = Rect2( 1050, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=57]
atlas = ExtResource( 1 )
region = Rect2( 1200, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=58]
atlas = ExtResource( 1 )
region = Rect2( 1350, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=59]
atlas = ExtResource( 1 )
region = Rect2( 1500, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=60]
atlas = ExtResource( 1 )
region = Rect2( 1650, 0, 150, 150 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 55 ), SubResource( 56 ), SubResource( 57 ), SubResource( 58 ), SubResource( 59 ), SubResource( 60 ) ],
"loop": true,
"name": "throwBomb",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=7]
radius = 4.0

[sub_resource type="CapsuleShape2D" id=8]
radius = 7.0
height = 6.0

[sub_resource type="CircleShape2D" id=9]
radius = 92.0869

[sub_resource type="CircleShape2D" id=11]
radius = 3.0

[sub_resource type="Animation" id=13]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=14]
resource_name = "Start"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=15]
resource_name = "Stop"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Curve2D" id=48]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 2, 2, -4.5, -2.25, 4.5, 2.25, 19, -6, -2.25, -4, 2.25, 4, 27, 2, 0, 0.5, 0, -0.5, 35, 12, 0.75, -4.75, -0.75, 4.75, 36, 25 )
}

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 12 )
region = Rect2( 0, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 12 )
region = Rect2( 100, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 12 )
region = Rect2( 200, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 12 )
region = Rect2( 300, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 12 )
region = Rect2( 400, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 12 )
region = Rect2( 500, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 12 )
region = Rect2( 600, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 12 )
region = Rect2( 700, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 12 )
region = Rect2( 800, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 12 )
region = Rect2( 900, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 12 )
region = Rect2( 1000, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 12 )
region = Rect2( 1100, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 12 )
region = Rect2( 1200, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 12 )
region = Rect2( 1300, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 12 )
region = Rect2( 1400, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 12 )
region = Rect2( 1500, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 12 )
region = Rect2( 1600, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 12 )
region = Rect2( 1700, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 12 )
region = Rect2( 1800, 0, 100, 100 )

[sub_resource type="SpriteFrames" id=47]
animations = [ {
"frames": [ SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ) ],
"loop": true,
"name": "bombExplode",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=10]
radius = 4.0

[node name="Goblin" type="KinematicBody2D"]
collision_layer = 16
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -20, -4 )
frames = SubResource( 6 )
animation = "idle"
offset = Vector2( 0, -12 )
script = ExtResource( 13 )

[node name="ShadowSprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 7 )

[node name="HurtBox" parent="." instance=ExtResource( 4 )]
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2( 0, -13 )
shape = SubResource( 8 )

[node name="Stats" parent="." instance=ExtResource( 5 )]

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 6 )]

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
shape = SubResource( 9 )

[node name="SoftCollision" parent="." instance=ExtResource( 8 )]

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
shape = SubResource( 11 )

[node name="WanderController" parent="." instance=ExtResource( 9 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
reset_on_save = false
anims/RESET = SubResource( 13 )
anims/Start = SubResource( 14 )
anims/Stop = SubResource( 15 )

[node name="Node2D" type="Node2D" parent="."]
script = ExtResource( 11 )

[node name="Path2D" type="Path2D" parent="Node2D"]
position = Vector2( 12, -27 )
curve = SubResource( 48 )

[node name="PathFollow2D" type="PathFollow2D" parent="Node2D/Path2D"]
position = Vector2( 2, 2 )
rotation = -0.64808

[node name="Bomb" type="AnimatedSprite" parent="Node2D/Path2D/PathFollow2D"]
visible = false
frames = SubResource( 47 )
animation = "bombExplode"

[node name="Tween" type="Tween" parent="Node2D/Path2D/PathFollow2D/Bomb"]

[node name="HitBox" parent="Node2D/Path2D/PathFollow2D/Bomb" instance=ExtResource( 7 )]
position = Vector2( 3.18898, 2.41463 )
rotation = 0.64808
collision_mask = 4

[node name="CollisionShape2D" parent="Node2D/Path2D/PathFollow2D/Bomb/HitBox" index="0"]
shape = SubResource( 10 )

[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="invincibility_ended" from="HurtBox" to="." method="_on_HurtBox_invincibility_ended"]
[connection signal="invincibility_started" from="HurtBox" to="." method="_on_HurtBox_invincibility_started"]
[connection signal="body_entered" from="PlayerDetectionZone" to="AnimatedSprite" method="_on_PlayerDetectionZone_body_entered"]

[editable path="HurtBox"]
[editable path="PlayerDetectionZone"]
[editable path="SoftCollision"]
[editable path="Node2D/Path2D/PathFollow2D/Bomb/HitBox"]
